crates/wgso/tests/cases_invalid/missing_uniform_param/.expected
error: missing uniform parameter `value`
 --> ./tests/cases_invalid/missing_uniform_param/compute_shader.wgsl:2:2
  |
2 | #run test()
  |  ^^^^^^^^^^
  |